--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ idna==3.4
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 packaging==23.1
-pywin32==306
+pywin32==306; platform_system == "Windows"
 requests==2.31.0
 urllib3==2.0.4
 websocket-client==1.6.1
